// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Components service endpoint returns an array of multiple components with key software renders each component with each key software 1`] = `
<div>
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="my-3"
        >
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Components
          </a>
           
          <a
            class="btn btn-secondary"
            href="?testOutcome=fail"
            target="_self"
          >
            
    Tests
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    Cross Functional Requirements
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Tech Debts
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    OpenAPI Specs
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    Key Software
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Repos
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Errors
          </a>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <table
          class="table table-dark table-bordered table-striped mt-2"
          style="width: 100%;"
        >
          <thead>
            <tr>
              <th
                class="component-type"
              >
                Type
              </th>
               
              <th
                class="component-name"
              >
                Name
              </th>
               
              <th>
                test-key-software-1
              </th>
              <th>
                test-key-software-2
              </th>
              <th>
                test-key-software-3
              </th>
            </tr>
          </thead>
           
          <tbody>
            <tr>
              <td>
                test-component-type-id-1
              </td>
               
              <td
                class="component-name table-primary"
              >
                <a
                  href="/components/test-component-id-1"
                >
                  Test Component Name 1
                </a>
              </td>
               
              <td>
                <span>
                  
                test-version-1
                  <br />
                </span>
              </td>
              <td />
              <td />
            </tr>
            <tr>
              <td>
                test-component-type-id-2
              </td>
               
              <td
                class="component-name table-primary"
              >
                <a
                  href="/components/test-component-id-2"
                >
                  Test Component Name 2
                </a>
              </td>
               
              <td />
              <td>
                <span>
                  
                test-version-2
                  <br />
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                test-component-type-id-3
              </td>
               
              <td
                class="component-name table-primary"
              >
                <a
                  href="/components/test-component-id-3"
                >
                  Test Component Name 3
                </a>
              </td>
               
              <td />
              <td />
              <td>
                <span>
                  
                test-version-3
                  <br />
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
       
      <div
        class="col-md-3"
      >
        <div
          class="mt-3"
        >
          <!---->
           
          <fieldset
            class="form-group"
            id="__BVID__90"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__90__BV_label_"
              tabindex="-1"
            >
              Teams
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__91"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__91_BV_option_0"
                    name="team"
                    type="checkbox"
                    value="test-team-id-1-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__91_BV_option_0"
                  >
                    <span>
                      test-team-id-1-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__91_BV_option_1"
                    name="team"
                    type="checkbox"
                    value="test-team-id-1-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__91_BV_option_1"
                  >
                    <span>
                      test-team-id-1-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__91_BV_option_2"
                    name="team"
                    type="checkbox"
                    value="test-team-id-2-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__91_BV_option_2"
                  >
                    <span>
                      test-team-id-2-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__91_BV_option_3"
                    name="team"
                    type="checkbox"
                    value="test-team-id-2-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__91_BV_option_3"
                  >
                    <span>
                      test-team-id-2-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__91_BV_option_4"
                    name="team"
                    type="checkbox"
                    value="test-team-id-3-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__91_BV_option_4"
                  >
                    <span>
                      test-team-id-3-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__91_BV_option_5"
                    name="team"
                    type="checkbox"
                    value="test-team-id-3-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__91_BV_option_5"
                  >
                    <span>
                      test-team-id-3-2
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <fieldset
            class="form-group"
            id="__BVID__98"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__98__BV_label_"
              tabindex="-1"
            >
              Tags
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__99"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__99_BV_option_0"
                    name="tag"
                    type="checkbox"
                    value="test-tag-1-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__99_BV_option_0"
                  >
                    <span>
                      test-tag-1-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__99_BV_option_1"
                    name="tag"
                    type="checkbox"
                    value="test-tag-1-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__99_BV_option_1"
                  >
                    <span>
                      test-tag-1-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__99_BV_option_2"
                    name="tag"
                    type="checkbox"
                    value="test-tag-2-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__99_BV_option_2"
                  >
                    <span>
                      test-tag-2-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__99_BV_option_3"
                    name="tag"
                    type="checkbox"
                    value="test-tag-2-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__99_BV_option_3"
                  >
                    <span>
                      test-tag-2-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__99_BV_option_4"
                    name="tag"
                    type="checkbox"
                    value="test-tag-3-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__99_BV_option_4"
                  >
                    <span>
                      test-tag-3-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__99_BV_option_5"
                    name="tag"
                    type="checkbox"
                    value="test-tag-3-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__99_BV_option_5"
                  >
                    <span>
                      test-tag-3-2
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <fieldset
            class="form-group"
            id="__BVID__106"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__106__BV_label_"
              tabindex="-1"
            >
              Component Types
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__107"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__107_BV_option_0"
                    name="componentTypeId"
                    type="checkbox"
                    value="test-component-type-id-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__107_BV_option_0"
                  >
                    <span>
                      test-component-type-id-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__107_BV_option_1"
                    name="componentTypeId"
                    type="checkbox"
                    value="test-component-type-id-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__107_BV_option_1"
                  >
                    <span>
                      test-component-type-id-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__107_BV_option_2"
                    name="componentTypeId"
                    type="checkbox"
                    value="test-component-type-id-3"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__107_BV_option_2"
                  >
                    <span>
                      test-component-type-id-3
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <fieldset
            class="form-group"
            id="__BVID__111"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__111__BV_label_"
              tabindex="-1"
            >
              Platforms
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__112"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__112_BV_option_0"
                    name="platformId"
                    type="checkbox"
                    value="undefined"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__112_BV_option_0"
                  >
                    <span>
                      undefined
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <div
            class="form-group"
            id="__BVID__114"
            role="group"
          >
            <label
              class="d-block"
              for="component-filter"
              id="__BVID__114__BV_label_"
            >
              Component
            </label>
            <div>
              <select
                class="custom-select custom-select-sm"
                id="component-filter"
              >
                <option
                  value=""
                >
                  Please select a component
                </option>
                <option
                  value="test-component-id-1"
                >
                  test-component-id-1
                </option>
                <option
                  value="test-component-id-2"
                >
                  test-component-id-2
                </option>
                <option
                  value="test-component-id-3"
                >
                  test-component-id-3
                </option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Index when Get Components service endpoint returns an array of multiple components with no key software renders a table row for each component 1`] = `
<div>
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="my-3"
        >
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Components
          </a>
           
          <a
            class="btn btn-secondary"
            href="?testOutcome=fail"
            target="_self"
          >
            
    Tests
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    Cross Functional Requirements
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Tech Debts
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    OpenAPI Specs
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    Key Software
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Repos
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Errors
          </a>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <table
          class="table table-dark table-bordered table-striped mt-2"
          style="width: 100%;"
        >
          <thead>
            <tr>
              <th
                class="component-type"
              >
                Type
              </th>
               
              <th
                class="component-name"
              >
                Name
              </th>
               
              <th>
                
              </th>
            </tr>
          </thead>
           
          <tbody>
            <tr>
              <td>
                test-component-type-id-1
              </td>
               
              <td
                class="component-name table-primary"
              >
                <a
                  href="/components/test-component-id-1"
                >
                  Test Component Name 1
                </a>
              </td>
               
              <td />
            </tr>
            <tr>
              <td>
                test-component-type-id-2
              </td>
               
              <td
                class="component-name table-primary"
              >
                <a
                  href="/components/test-component-id-2"
                >
                  Test Component Name 2
                </a>
              </td>
               
              <td />
            </tr>
            <tr>
              <td>
                test-component-type-id-3
              </td>
               
              <td
                class="component-name table-primary"
              >
                <a
                  href="/components/test-component-id-3"
                >
                  Test Component Name 3
                </a>
              </td>
               
              <td />
            </tr>
          </tbody>
        </table>
      </div>
       
      <div
        class="col-md-3"
      >
        <div
          class="mt-3"
        >
          <!---->
           
          <fieldset
            class="form-group"
            id="__BVID__47"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__47__BV_label_"
              tabindex="-1"
            >
              Teams
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__48"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__48_BV_option_0"
                    name="team"
                    type="checkbox"
                    value="test-team-id-1-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__48_BV_option_0"
                  >
                    <span>
                      test-team-id-1-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__48_BV_option_1"
                    name="team"
                    type="checkbox"
                    value="test-team-id-1-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__48_BV_option_1"
                  >
                    <span>
                      test-team-id-1-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__48_BV_option_2"
                    name="team"
                    type="checkbox"
                    value="test-team-id-2-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__48_BV_option_2"
                  >
                    <span>
                      test-team-id-2-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__48_BV_option_3"
                    name="team"
                    type="checkbox"
                    value="test-team-id-2-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__48_BV_option_3"
                  >
                    <span>
                      test-team-id-2-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__48_BV_option_4"
                    name="team"
                    type="checkbox"
                    value="test-team-id-3-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__48_BV_option_4"
                  >
                    <span>
                      test-team-id-3-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__48_BV_option_5"
                    name="team"
                    type="checkbox"
                    value="test-team-id-3-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__48_BV_option_5"
                  >
                    <span>
                      test-team-id-3-2
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <fieldset
            class="form-group"
            id="__BVID__55"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__55__BV_label_"
              tabindex="-1"
            >
              Tags
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__56"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__56_BV_option_0"
                    name="tag"
                    type="checkbox"
                    value="test-tag-1-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__56_BV_option_0"
                  >
                    <span>
                      test-tag-1-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__56_BV_option_1"
                    name="tag"
                    type="checkbox"
                    value="test-tag-1-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__56_BV_option_1"
                  >
                    <span>
                      test-tag-1-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__56_BV_option_2"
                    name="tag"
                    type="checkbox"
                    value="test-tag-2-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__56_BV_option_2"
                  >
                    <span>
                      test-tag-2-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__56_BV_option_3"
                    name="tag"
                    type="checkbox"
                    value="test-tag-2-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__56_BV_option_3"
                  >
                    <span>
                      test-tag-2-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__56_BV_option_4"
                    name="tag"
                    type="checkbox"
                    value="test-tag-3-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__56_BV_option_4"
                  >
                    <span>
                      test-tag-3-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__56_BV_option_5"
                    name="tag"
                    type="checkbox"
                    value="test-tag-3-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__56_BV_option_5"
                  >
                    <span>
                      test-tag-3-2
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <fieldset
            class="form-group"
            id="__BVID__63"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__63__BV_label_"
              tabindex="-1"
            >
              Component Types
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__64"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__64_BV_option_0"
                    name="componentTypeId"
                    type="checkbox"
                    value="test-component-type-id-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__64_BV_option_0"
                  >
                    <span>
                      test-component-type-id-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__64_BV_option_1"
                    name="componentTypeId"
                    type="checkbox"
                    value="test-component-type-id-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__64_BV_option_1"
                  >
                    <span>
                      test-component-type-id-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__64_BV_option_2"
                    name="componentTypeId"
                    type="checkbox"
                    value="test-component-type-id-3"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__64_BV_option_2"
                  >
                    <span>
                      test-component-type-id-3
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <fieldset
            class="form-group"
            id="__BVID__68"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__68__BV_label_"
              tabindex="-1"
            >
              Platforms
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__69"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__69_BV_option_0"
                    name="platformId"
                    type="checkbox"
                    value="undefined"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__69_BV_option_0"
                  >
                    <span>
                      undefined
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <div
            class="form-group"
            id="__BVID__71"
            role="group"
          >
            <label
              class="d-block"
              for="component-filter"
              id="__BVID__71__BV_label_"
            >
              Component
            </label>
            <div>
              <select
                class="custom-select custom-select-sm"
                id="component-filter"
              >
                <option
                  value=""
                >
                  Please select a component
                </option>
                <option
                  value="test-component-id-1"
                >
                  test-component-id-1
                </option>
                <option
                  value="test-component-id-2"
                >
                  test-component-id-2
                </option>
                <option
                  value="test-component-id-3"
                >
                  test-component-id-3
                </option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Index when Get Components service endpoint returns an array of multiple components with the same key software names for each component renders only one table column per key software name 1`] = `
<div>
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="my-3"
        >
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Components
          </a>
           
          <a
            class="btn btn-secondary"
            href="?testOutcome=fail"
            target="_self"
          >
            
    Tests
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    Cross Functional Requirements
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Tech Debts
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    OpenAPI Specs
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    Key Software
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Repos
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Errors
          </a>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <table
          class="table table-dark table-bordered table-striped mt-2"
          style="width: 100%;"
        >
          <thead>
            <tr>
              <th
                class="component-type"
              >
                Type
              </th>
               
              <th
                class="component-name"
              >
                Name
              </th>
               
              <th>
                test-key-software-1
              </th>
              <th>
                test-key-software-2
              </th>
            </tr>
          </thead>
           
          <tbody>
            <tr>
              <td>
                test-component-type-id-1
              </td>
               
              <td
                class="component-name table-primary"
              >
                <a
                  href="/components/test-component-id-1"
                >
                  Test Component Name 1
                </a>
              </td>
               
              <td>
                <span>
                  
                test-version-1
                  <br />
                </span>
              </td>
              <td>
                <span>
                  
                test-version-2
                  <br />
                </span>
              </td>
            </tr>
            <tr>
              <td>
                test-component-type-id-2
              </td>
               
              <td
                class="component-name table-primary"
              >
                <a
                  href="/components/test-component-id-2"
                >
                  Test Component Name 2
                </a>
              </td>
               
              <td>
                <span>
                  
                test-version-3
                  <br />
                </span>
              </td>
              <td>
                <span>
                  
                test-version-4
                  <br />
                </span>
              </td>
            </tr>
            <tr>
              <td>
                test-component-type-id-3
              </td>
               
              <td
                class="component-name table-primary"
              >
                <a
                  href="/components/test-component-id-3"
                >
                  Test Component Name 3
                </a>
              </td>
               
              <td>
                <span>
                  
                test-version-5
                  <br />
                </span>
              </td>
              <td>
                <span>
                  
                test-version-6
                  <br />
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
       
      <div
        class="col-md-3"
      >
        <div
          class="mt-3"
        >
          <!---->
           
          <fieldset
            class="form-group"
            id="__BVID__133"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__133__BV_label_"
              tabindex="-1"
            >
              Teams
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__134"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__134_BV_option_0"
                    name="team"
                    type="checkbox"
                    value="test-team-id-1-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__134_BV_option_0"
                  >
                    <span>
                      test-team-id-1-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__134_BV_option_1"
                    name="team"
                    type="checkbox"
                    value="test-team-id-1-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__134_BV_option_1"
                  >
                    <span>
                      test-team-id-1-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__134_BV_option_2"
                    name="team"
                    type="checkbox"
                    value="test-team-id-2-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__134_BV_option_2"
                  >
                    <span>
                      test-team-id-2-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__134_BV_option_3"
                    name="team"
                    type="checkbox"
                    value="test-team-id-2-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__134_BV_option_3"
                  >
                    <span>
                      test-team-id-2-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__134_BV_option_4"
                    name="team"
                    type="checkbox"
                    value="test-team-id-3-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__134_BV_option_4"
                  >
                    <span>
                      test-team-id-3-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__134_BV_option_5"
                    name="team"
                    type="checkbox"
                    value="test-team-id-3-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__134_BV_option_5"
                  >
                    <span>
                      test-team-id-3-2
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <fieldset
            class="form-group"
            id="__BVID__141"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__141__BV_label_"
              tabindex="-1"
            >
              Tags
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__142"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__142_BV_option_0"
                    name="tag"
                    type="checkbox"
                    value="test-tag-1-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__142_BV_option_0"
                  >
                    <span>
                      test-tag-1-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__142_BV_option_1"
                    name="tag"
                    type="checkbox"
                    value="test-tag-1-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__142_BV_option_1"
                  >
                    <span>
                      test-tag-1-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__142_BV_option_2"
                    name="tag"
                    type="checkbox"
                    value="test-tag-2-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__142_BV_option_2"
                  >
                    <span>
                      test-tag-2-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__142_BV_option_3"
                    name="tag"
                    type="checkbox"
                    value="test-tag-2-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__142_BV_option_3"
                  >
                    <span>
                      test-tag-2-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__142_BV_option_4"
                    name="tag"
                    type="checkbox"
                    value="test-tag-3-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__142_BV_option_4"
                  >
                    <span>
                      test-tag-3-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__142_BV_option_5"
                    name="tag"
                    type="checkbox"
                    value="test-tag-3-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__142_BV_option_5"
                  >
                    <span>
                      test-tag-3-2
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <fieldset
            class="form-group"
            id="__BVID__149"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__149__BV_label_"
              tabindex="-1"
            >
              Component Types
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__150"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__150_BV_option_0"
                    name="componentTypeId"
                    type="checkbox"
                    value="test-component-type-id-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__150_BV_option_0"
                  >
                    <span>
                      test-component-type-id-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__150_BV_option_1"
                    name="componentTypeId"
                    type="checkbox"
                    value="test-component-type-id-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__150_BV_option_1"
                  >
                    <span>
                      test-component-type-id-2
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__150_BV_option_2"
                    name="componentTypeId"
                    type="checkbox"
                    value="test-component-type-id-3"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__150_BV_option_2"
                  >
                    <span>
                      test-component-type-id-3
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <fieldset
            class="form-group"
            id="__BVID__154"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__154__BV_label_"
              tabindex="-1"
            >
              Platforms
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__155"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__155_BV_option_0"
                    name="platformId"
                    type="checkbox"
                    value="undefined"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__155_BV_option_0"
                  >
                    <span>
                      undefined
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <div
            class="form-group"
            id="__BVID__157"
            role="group"
          >
            <label
              class="d-block"
              for="component-filter"
              id="__BVID__157__BV_label_"
            >
              Component
            </label>
            <div>
              <select
                class="custom-select custom-select-sm"
                id="component-filter"
              >
                <option
                  value=""
                >
                  Please select a component
                </option>
                <option
                  value="test-component-id-1"
                >
                  test-component-id-1
                </option>
                <option
                  value="test-component-id-2"
                >
                  test-component-id-2
                </option>
                <option
                  value="test-component-id-3"
                >
                  test-component-id-3
                </option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Index when Get Components service endpoint returns an empty array renders the page 1`] = `
<div>
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="my-3"
        >
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Components
          </a>
           
          <a
            class="btn btn-secondary"
            href="?testOutcome=fail"
            target="_self"
          >
            
    Tests
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    Cross Functional Requirements
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Tech Debts
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    OpenAPI Specs
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    Key Software
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Repos
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Errors
          </a>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <table
          class="table table-dark table-bordered table-striped mt-2"
          style="width: 100%;"
        >
          <thead>
            <tr>
              <th
                class="component-type"
              >
                Type
              </th>
               
              <th
                class="component-name"
              >
                Name
              </th>
               
            </tr>
          </thead>
           
          <tbody />
        </table>
      </div>
       
      <div
        class="col-md-3"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Index when a key software has multiple versions renders all versions 1`] = `
<div>
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="my-3"
        >
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Components
          </a>
           
          <a
            class="btn btn-secondary"
            href="?testOutcome=fail"
            target="_self"
          >
            
    Tests
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    Cross Functional Requirements
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Tech Debts
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    OpenAPI Specs
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            
    Key Software
  
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Repos
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="#"
            target="_self"
          >
            Errors
          </a>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <table
          class="table table-dark table-bordered table-striped mt-2"
          style="width: 100%;"
        >
          <thead>
            <tr>
              <th
                class="component-type"
              >
                Type
              </th>
               
              <th
                class="component-name"
              >
                Name
              </th>
               
              <th>
                test-key-software-1
              </th>
            </tr>
          </thead>
           
          <tbody>
            <tr>
              <td>
                test-component-type-id-1
              </td>
               
              <td
                class="component-name table-primary"
              >
                <a
                  href="/components/test-component-id-1"
                >
                  Test Component Name 1
                </a>
              </td>
               
              <td>
                <span>
                  
                test-version-1
                  <br />
                </span>
                <span>
                  
                test-version-2
                  <br />
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
       
      <div
        class="col-md-3"
      >
        <div
          class="mt-3"
        >
          <!---->
           
          <fieldset
            class="form-group"
            id="__BVID__174"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__174__BV_label_"
              tabindex="-1"
            >
              Teams
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__175"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__175_BV_option_0"
                    name="team"
                    type="checkbox"
                    value="test-team-id-1-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__175_BV_option_0"
                  >
                    <span>
                      test-team-id-1-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__175_BV_option_1"
                    name="team"
                    type="checkbox"
                    value="test-team-id-1-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__175_BV_option_1"
                  >
                    <span>
                      test-team-id-1-2
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <fieldset
            class="form-group"
            id="__BVID__178"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__178__BV_label_"
              tabindex="-1"
            >
              Tags
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__179"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__179_BV_option_0"
                    name="tag"
                    type="checkbox"
                    value="test-tag-1-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__179_BV_option_0"
                  >
                    <span>
                      test-tag-1-1
                    </span>
                  </label>
                </div>
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__179_BV_option_1"
                    name="tag"
                    type="checkbox"
                    value="test-tag-1-2"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__179_BV_option_1"
                  >
                    <span>
                      test-tag-1-2
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <fieldset
            class="form-group"
            id="__BVID__182"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__182__BV_label_"
              tabindex="-1"
            >
              Component Types
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__183"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__183_BV_option_0"
                    name="componentTypeId"
                    type="checkbox"
                    value="test-component-type-id-1"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__183_BV_option_0"
                  >
                    <span>
                      test-component-type-id-1
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <fieldset
            class="form-group"
            id="__BVID__185"
          >
            <legend
              class="bv-no-focus-ring col-form-label pt-0"
              id="__BVID__185__BV_label_"
              tabindex="-1"
            >
              Platforms
            </legend>
            <div>
              <div
                class="bv-no-focus-ring"
                id="__BVID__186"
                role="group"
                tabindex="-1"
              >
                <div
                  class="custom-control custom-checkbox"
                >
                  <input
                    class="custom-control-input"
                    id="__BVID__186_BV_option_0"
                    name="platformId"
                    type="checkbox"
                    value="undefined"
                  />
                  <label
                    class="custom-control-label"
                    for="__BVID__186_BV_option_0"
                  >
                    <span>
                      undefined
                    </span>
                  </label>
                </div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
           
          <div
            class="form-group"
            id="__BVID__188"
            role="group"
          >
            <label
              class="d-block"
              for="component-filter"
              id="__BVID__188__BV_label_"
            >
              Component
            </label>
            <div>
              <select
                class="custom-select custom-select-sm"
                id="component-filter"
              >
                <option
                  value=""
                >
                  Please select a component
                </option>
                <option
                  value="test-component-id-1"
                >
                  test-component-id-1
                </option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
